# QEstoqueLoja

./: .gitignore  CMakeLists.txt
src/: alterarproduto.cpp  clientes.cpp  delegatehora.cpp  entradas.cpp  entradas.h  inserirproduto.cpp  inserirproduto.h  janelaemailcontador.cpp  janelaemailcontador.h  mainwindow.cpp  mainwindow.h  pagamentovenda.cpp  relatorios.cpp  schemamanager.cpp  venda.cpp  venda.h
src/dto/: Cliente_dto.h  Produto_dto.h
src/infra/: apppath_service.cpp  apppath_service.h  databaseconnection_service.cpp  databaseconnection_service.h
src/nota/: eventocienciaop.cpp  eventocienciaop.h  nfeacbr.cpp
src/repository/: Produto_repository.cpp  Produto_repository.h  cliente_repository.cpp  cliente_repository.h  notafiscal_repository.cpp  notafiscal_repository.h  produtonota_repository.cpp
src/services/: InserirProduto_service.cpp  InserirProduto_service.h  Produto_service.cpp  Produto_service.h  acbr_service.cpp  acbr_service.h  barcode_service.cpp  cliente_service.cpp  cliente_service.h  notafiscal_service.cpp  notafiscal_service.h  recibo_service.cpp  schemamigration_service.cpp  schemamigration_service.h
src/util/: manifestadordfe.cpp  manifestadordfe.h
tests/: CMakeLists.txt  test_main.cpp
tests/db/: test_db_factory.cpp
tests/services/: test_cliente_service.cpp  test_cliente_service.h  test_inserirproduto_service.cpp  test_inserirproduto_service.h  test_produto_service.cpp  test_produto_service.h
